==> Embeddedfab-Co/checkweigher_main/checkweigher_main/MCAL/EF_TIVA_DIO.c <==
#include "EF_TIVA_DIO.h"

S8_t  EF_S8_DIO_InitPort (U8_t PortName, U8_t Value)
{
    S8_t Status;
    
    Status = 1;
	switch(PortName)
	{
	     case 'a':
		 case 'A':
		 	SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOA);
			GPIOPinTypeGPIOOutput (GPIO_PORTA_BASE, (0xFF) & Value);
            GPIOPinTypeGPIOInput (GPIO_PORTA_BASE,  (0xFF) ^ Value);
		 break;
		 case 'b':
		 case 'B':
            SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOB);
			GPIOPinTypeGPIOOutput (GPIO_PORTB_BASE, (0xFF) & Value);
            GPIOPinTypeGPIOInput (GPIO_PORTB_BASE,  (0xFF) ^ Value);
		 break;
		 case 'c':
		 case 'C':
            SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOC);
			GPIOPinTypeGPIOOutput (GPIO_PORTC_BASE, (0xFF) & Value);
            GPIOPinTypeGPIOInput (GPIO_PORTC_BASE,  (0xFF) ^ Value);
		 break;
		 case 'd':
		 case 'D':
			HWREG(GPIO_PORTD_BASE + GPIO_O_LOCK) = GPIO_LOCK_KEY;
			HWREG(GPIO_PORTD_BASE + GPIO_O_CR ) = 0x80;
			HWREG(GPIO_PORTD_BASE + GPIO_O_LOCK) = 0;
            SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);
			GPIOPinTypeGPIOOutput (GPIO_PORTD_BASE, (0xFF) & Value);
            GPIOPinTypeGPIOInput (GPIO_PORTD_BASE,  (0xFF) ^ Value);
		 break;
		 case 'e':
		 case 'E':
			if (Value > 0x3F)
			{
				Status = -1;
				break;
			}
            SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOE);
			GPIOPinTypeGPIOOutput (GPIO_PORTE_BASE, (0xFF) & Value);
            GPIOPinTypeGPIOInput (GPIO_PORTE_BASE,  (0xFF) ^ Value);
		 break;
		 case 'f':
		 case 'F':
			if (Value > 0x1F)
			{
				Status = -1;
				break;
			}
			HWREG(GPIO_PORTF_BASE + GPIO_O_LOCK) = GPIO_LOCK_KEY;
			HWREG(GPIO_PORTF_BASE + GPIO_O_CR ) = 0x01;
			HWREG(GPIO_PORTF_BASE + GPIO_O_LOCK) = 0;
            SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOF);
			GPIOPinTypeGPIOOutput (GPIO_PORTF_BASE, (0xFF) & Value);
            GPIOPinTypeGPIOInput (GPIO_PORTF_BASE,  (0xFF) ^ Value);
		 break;
		 default:
             Status = -1;

    }

    return(Status);
}

S8_t  EF_S8_DIO_WritePort(U8_t PortName, U8_t Value)
{
    S8_t Status;
    
    Status = 1;
	switch(PortName)
	{
	     case 'a':
		 case 'A':
			GPIOPinWrite(GPIO_PORTA_BASE, 0xff, Value);
		 break;
		 case 'b':
		 case 'B':
             GPIOPinWrite(GPIO_PORTB_BASE, 0xff, Value);
		 break;
		 case 'c':
		 case 'C':
            GPIOPinWrite(GPIO_PORTC_BASE, 0xff, Value);
		 break;
		 case 'd':
		 case 'D':
            GPIOPinWrite(GPIO_PORTD_BASE, 0xff, Value);
		 break;
		 case 'e':
		 case 'E':
			 GPIOPinWrite(GPIO_PORTE_BASE, 0xff, Value);
		 break;
		 case 'f':
		 case 'F':
			GPIOPinWrite(GPIO_PORTF_BASE, 0xff, Value);
		 break;
		 default:
             Status = -1;
    }

    return(Status);
}

S16_t EF_S16_DIO_ReadPort (U8_t PortName)
{
    volatile S8_t  Status;

    switch(PortName)
	{
	     case 'a':
		 case 'A':
			Status = GPIOPinRead(GPIO_PORTA_BASE, 0xff);
		 break;
		 case 'b':
		 case 'B':
            Status = GPIOPinRead(GPIO_PORTB_BASE, 0xff);
		 break;
		 case 'c':
		 case 'C':
            Status = GPIOPinRead(GPIO_PORTC_BASE, 0xff);
		 break;
		 case 'd':
		 case 'D':
            Status = GPIOPinRead(GPIO_PORTD_BASE, 0xff);
		 break;
		 case 'e':
		 case 'E':
			 Status = GPIOPinRead(GPIO_PORTE_BASE, 0xff);
		 break;
		 case 'f':
		 case 'F':
			Status = GPIOPinRead(GPIO_PORTF_BASE, 0xff);
		 break;
		 default:
             Status = -1;
    }
    return(Status);
}

S8_t  EF_S8_DIO_SetPin   (U8_t PortName, U8_t PinNumber)
{
    S8_t Status;

    if(PinNumber > 7)
	{
	    Status = -1;
    }
	else
	{    
		Status = 1;
	    switch(PortName)
		{
		 case 'a':
		 case 'A':
			GPIOPinWrite(GPIO_PORTA_BASE, 1<<PinNumber , 1<<PinNumber );
		 break;
		 case 'b':
		 case 'B':
             GPIOPinWrite(GPIO_PORTB_BASE,  1<<PinNumber , 1<<PinNumber );
		 break;
		 case 'c':
		 case 'C':
            GPIOPinWrite(GPIO_PORTC_BASE,  1<<PinNumber , 1<<PinNumber );
		 break;
		 case 'd':
		 case 'D':
            GPIOPinWrite(GPIO_PORTD_BASE,  1<<PinNumber , 1<<PinNumber );
		 break;
		 case 'e':
		 case 'E':
			 GPIOPinWrite(GPIO_PORTE_BASE,  1<<PinNumber , 1<<PinNumber );
		 break;
		 case 'f':
		 case 'F':
			GPIOPinWrite(GPIO_PORTF_BASE,  1<<PinNumber , 1<<PinNumber );
		 break;
			 default:
	             Status = -1;
	    }
    }
    return(Status);

}

S8_t  EF_S8_DIO_ClearPin (U8_t PortName, U8_t PinNumber)
{
    S8_t Status;

    if(PinNumber > 7)
	{
	    Status = -1;
    }
	else
	{
	    Status = 1;
	    switch(PortName)
		{
		 case 'a':
		 case 'A':
			GPIOPinWrite(GPIO_PORTA_BASE, 1<<PinNumber , 0 );
		 break;
		 case 'b':
		 case 'B':
             GPIOPinWrite(GPIO_PORTB_BASE,  1<<PinNumber , 0 );
		 break;
		 case 'c':
		 case 'C':
            GPIOPinWrite(GPIO_PORTC_BASE,  1<<PinNumber , 0 );
		 break;
		 case 'd':
		 case 'D':
            GPIOPinWrite(GPIO_PORTD_BASE,  1<<PinNumber , 0 );
		 break;
		 case 'e':
		 case 'E':
			 GPIOPinWrite(GPIO_PORTE_BASE,  1<<PinNumber , 0 );
		 break;
		 case 'f':
		 case 'F':
			GPIOPinWrite(GPIO_PORTF_BASE,  1<<PinNumber , 0 );
		 break;
		default:
	             Status = -1;
	    }
	}
    return(Status);

}

S8_t  EF_S8_DIO_SetPort  (U8_t PortName)
{
    S8_t Status;
    
    Status = 1;
	switch(PortName)
	{
	    case 'a':
		 case 'A':
			GPIOPinWrite(GPIO_PORTA_BASE, 0xff, 0xff);
		 break;
		 case 'b':
		 case 'B':
             GPIOPinWrite(GPIO_PORTB_BASE, 0xff, 0xff);
		 break;
		 case 'c':
		 case 'C':
            GPIOPinWrite(GPIO_PORTC_BASE, 0xff, 0xff);
		 break;
		 case 'd':
		 case 'D':
            GPIOPinWrite(GPIO_PORTD_BASE, 0xff, 0xff);
		 break;
		 case 'e':
		 case 'E':
			 GPIOPinWrite(GPIO_PORTE_BASE, 0xff, 0xff);
		 break;
		 case 'f':
		 case 'F':
			GPIOPinWrite(GPIO_PORTF_BASE, 0xff, 0xff);
		 break;
		 default:
             Status = -1;
    }

    return(Status);
}

S8_t  EF_S8_DIO_ClearPort(U8_t PortName)
{
    S8_t Status;
    
    Status = 1;
	switch(PortName)
	{
	    	    case 'a':
		 case 'A':
			GPIOPinWrite(GPIO_PORTA_BASE, 0xff, 0);
		 break;
		 case 'b':
		 case 'B':
             GPIOPinWrite(GPIO_PORTB_BASE, 0xff, 0);
		 break;
		 case 'c':
		 case 'C':
            GPIOPinWrite(GPIO_PORTC_BASE, 0xff, 0);
		 break;
		 case 'd':
		 case 'D':
            GPIOPinWrite(GPIO_PORTD_BASE, 0xff, 0);
		 break;
		 case 'e':
		 case 'E':
			 GPIOPinWrite(GPIO_PORTE_BASE, 0xff, 0);
		 break;
		 case 'f':
		 case 'F':
			GPIOPinWrite(GPIO_PORTF_BASE, 0xff, 0);
		 break;
		 default:
             Status = -1;
    }

    return(Status);
}

S8_t  EF_S8_DIO_TogglePin(U8_t PortName, U8_t PinNumber)
{
    volatile S8_t Status;
    
    if(PinNumber > 7)
	{
	    Status = -1;
    }
	else
	{
	    Status = 1;
		switch(PortName)
		{
	     case 'a':
		 case 'A':
			Status = GPIOPinRead(GPIO_PORTA_BASE, 1<<PinNumber);
			GPIOPinWrite(GPIO_PORTA_BASE, 1<<PinNumber, Status ^ (1<<PinNumber) );
		 break;
		 case 'b':
		 case 'B':
            Status = GPIOPinRead(GPIO_PORTB_BASE,  1<<PinNumber);
			GPIOPinWrite(GPIO_PORTB_BASE, 1<<PinNumber, Status ^ (1<<PinNumber) );
		 break;
		 case 'c':
		 case 'C':
            Status = GPIOPinRead(GPIO_PORTC_BASE,  1<<PinNumber);
			GPIOPinWrite(GPIO_PORTC_BASE, 1<<PinNumber, Status ^ (1<<PinNumber) );
		 break;
		 case 'd':
		 case 'D':
            Status = GPIOPinRead(GPIO_PORTD_BASE,  1<<PinNumber);
			GPIOPinWrite(GPIO_PORTD_BASE, 1<<PinNumber, Status ^ (1<<PinNumber) );
		 break;
		 case 'e':
		 case 'E':
			 Status = GPIOPinRead(GPIO_PORTE_BASE,  1<<PinNumber);
			 GPIOPinWrite(GPIO_PORTE_BASE, 1<<PinNumber, Status ^ (1<<PinNumber) );
		 break;
		 case 'f':
		 case 'F':
			Status = GPIOPinRead(GPIO_PORTF_BASE,  1<<PinNumber);
			GPIOPinWrite(GPIO_PORTF_BASE, 1<<PinNumber, Status ^ (1<<PinNumber) );
		 break;
			 default:
	             Status = -1;
	    }
    }
	if (Status != -1)
	{
		Status = 1;
	}
    return(Status);
}

S8_t  EF_S8_DIO_CheckPin (U8_t PortName, U8_t PinNumber)
{
    volatile S8_t Status      = 0;
    

    if(PinNumber > 7)
    {
        Status = -1;
    }
    else
    {
        switch(PortName)
        {
        case 'a':
        case 'A':
            Status = ( (GPIOPinRead(GPIO_PORTA_BASE, 1<<PinNumber) ) & (1<<PinNumber) )>>PinNumber;
            break;
        case 'b':
        case 'B':
            Status = ( (GPIOPinRead(GPIO_PORTB_BASE, 1<<PinNumber) )  & (1<<PinNumber) ) >>PinNumber;
            break;
        case 'c':
        case 'C':
            Status = ( (GPIOPinRead(GPIO_PORTC_BASE, 1<<PinNumber) ) & (1<<PinNumber) )>>PinNumber;
            break;
        case 'd':
        case 'D':
            Status = ( (GPIOPinRead(GPIO_PORTD_BASE, 1<<PinNumber) ) & (1<<PinNumber) )>>PinNumber;
            break;
        case 'e':
        case 'E':
            Status = ( (GPIOPinRead(GPIO_PORTE_BASE, 1<<PinNumber) ) & (1<<PinNumber) )>>PinNumber;
            break;
        case 'f':
        case 'F':
            Status = ( (GPIOPinRead(GPIO_PORTF_BASE, 1<<PinNumber) ) & (1<<PinNumber) )>>PinNumber;
            break;
        default:
            Status = -1;
	    }
    }
    return(Status);
}
