==> EmbeddedFab/EF_AVR_Lib/MCAL/EF_DIO.c <==
#include <avr/io.h>
#include "EF_DIO.h"

S8_t  EF_S8_DIO_InitPort (U8_t PortName, U8_t Value)
{
    S8_t Status;
    
    Status = 1;
	switch(PortName)
	{
	     case 'a':
		 case 'A':
             DDRA = Value;
		 break;
		 case 'b':
		 case 'B':
             DDRB = Value;
		 break;
		 case 'c':
		 case 'C':
             DDRC = Value;
		 break;
		 case 'd':
		 case 'D':
             DDRD = Value;
		 break;
		 default:
             Status = -1;

    }

    return(Status);
}

S8_t  EF_S8_DIO_WritePort(U8_t PortName, U8_t Value)
{
    S8_t Status;
    
    Status = 1;
	switch(PortName)
	{
	     case 'a':
		 case 'A':
             PORTA = Value;
		 break;
		 case 'b':
		 case 'B':
             PORTB = Value;
		 break;
		 case 'c':
		 case 'C':
             PORTC = Value;
		 break;
		 case 'd':
		 case 'D':
             PORTD = Value;
		 break;
		 default:
             Status = -1;
    }

    return(Status);
}

S16_t EF_S16_DIO_ReadPort (U8_t PortName)
{
    volatile S8_t  Status;

    switch(PortName)
	{
	     case 'a':
		 case 'A':
             Status = PINA;
		 break;
		 case 'b':
		 case 'B':
             Status = PINB;
		 break;
		 case 'c':
		 case 'C':
             Status = PINC;
		 break;
		 case 'd':
		 case 'D':
             Status = PIND;
		 break;
		 default:
             Status = -1;
    }
    return(Status);
}

S8_t  EF_S8_DIO_SetPin   (U8_t PortName, U8_t PinNumber)
{
    S8_t Status;

    if(PinNumber > 7)
	{
	    Status = -1;
    }
	else
	{    
		Status = 1;
	    switch(PortName)
		{
		     case 'a':
			 case 'A':
	             PORTA |= (1 << PinNumber);
			 break;
			 case 'b':
			 case 'B':
	             PORTB |= (1 << PinNumber);
			 break;
			 case 'c':
			 case 'C':
	             PORTC |= (1 << PinNumber);
			 break;
			 case 'd':
			 case 'D':
	             PORTD |= (1 << PinNumber);
			 break;
			 default:
	             Status = -1;
	    }
    }
    return(Status);

}

S8_t  EF_S8_DIO_ClearPin (U8_t PortName, U8_t PinNumber)
{
    S8_t Status;

    if(PinNumber > 7)
	{
	    Status = -1;
    }
	else
	{
	    Status = 1;
	    switch(PortName)
		{
		     case 'a':
			 case 'A':
	             PORTA &= ~(1 << PinNumber);
			 break;
			 case 'b':
			 case 'B':
	             PORTB &= ~(1 << PinNumber);
			 break;
			 case 'c':
			 case 'C':
	             PORTC &= ~(1 << PinNumber);
			 break;
			 case 'd':
			 case 'D':
	             PORTD &= ~(1 << PinNumber);
			 break;
			 default:
	             Status = -1;
	    }
	}
    return(Status);

}

S8_t  EF_S8_DIO_SetPort  (U8_t PortName)
{
    S8_t Status;
    
    Status = 1;
	switch(PortName)
	{
	     case 'a':
		 case 'A':
             PORTA = 0xFF;
		 break;
		 case 'b':
		 case 'B':
             PORTB = 0xFF;
		 break;
		 case 'c':
		 case 'C':
             PORTC = 0xFF;
		 break;
		 case 'd':
		 case 'D':
             PORTD = 0xFF;
		 break;
		 default:
             Status = -1;
    }

    return(Status);
}

S8_t  EF_S8_DIO_ClearPort(U8_t PortName)
{
    S8_t Status;
    
    Status = 1;
	switch(PortName)
	{
	     case 'a':
		 case 'A':
             PORTA = 0x00;
		 break;
		 case 'b':
		 case 'B':
             PORTB = 0x00;
		 break;
		 case 'c':
		 case 'C':
             PORTC = 0x00;
		 break;
		 case 'd':
		 case 'D':
             PORTD = 0x00;
		 break;
		 default:
             Status = -1;
    }

    return(Status);
}

S8_t  EF_S8_DIO_TogglePin(U8_t PortName, U8_t PinNumber)
{
    S8_t Status;
    
    if(PinNumber > 7)
	{
	    Status = -1;
    }
	else
	{
	    Status = 1;
		switch(PortName)
		{
		     case 'a':
			 case 'A':
	             PORTA ^= (1 << PinNumber);
			 break;
			 case 'b':
			 case 'B':
	             PORTB ^= (1 << PinNumber);
			 break;
			 case 'c':
			 case 'C':
	             PORTC ^= (1 << PinNumber);
			 break;
			 case 'd':
			 case 'D':
	             PORTD ^= (1 << PinNumber);
			 break;
			 default:
	             Status = -1;
	    }
    }
    return(Status);
}

S8_t  EF_S8_DIO_CheckPin (U8_t PortName, U8_t PinNumber)
{
    S8_t Status = 0;
    
    if(PinNumber > 7)
	{
	    Status = -1;
    }
	else
	{
		switch(PortName)
		{
		     case 'a':
			 case 'A':
	             Status = (PINA & (1 << PinNumber));
			 break;
			 case 'b':
			 case 'B':
	             Status = (PINB & (1 << PinNumber));
			 break;
			 case 'c':
			 case 'C':
	             Status = (PINC & (1 << PinNumber));
			 break;
			 case 'd':
			 case 'D':
	             Status = (PIND & (1 << PinNumber));
			 break;
			 default:
	             Status = -1;
	    }
    }
    return(Status);
}
